--- a/report/report.tex
+++ b/report/report.tex
@@ -184,7 +184,7 @@ primitives, this includes the following:
 \end{enumerate}
 
 It's worth noting that the Gezira library is parallel to some degree. It may be fruitful to base any parallelization efforts in Rasterific on how it is achieved in Gezira. However,
-since Gezira is written in Nile and compiled into C with a heavy runtime which we would need to understand to understand when the rasterizer is multithreaded, we chosen to instead
+since Gezira is written in Nile and compiled into C with a heavy runtime which we would need to understand to understand when the rasterizer is multithreaded, we have chosen to instead
  base our work on the comments of Rasterific's author.
 %Måske noget om benchmarks?
 \subsection{Parallel Haskell}
