--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -6,6 +6,7 @@
 \setbeamercovered{highly dynamic}
 
 \usepackage[T1]{fontenc}
+\usepackage{lmodern}
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{graphicx}
