added some further work + conclusion

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -117,9 +117,21 @@ maybe some graphical representation of the table from the report
 \end{frame}
 
 \begin{frame}[c]{Evaluation}
-Why we got these results
 \end{frame}
 
 \begin{frame}[c]{Further Work and Conclusion}
+
+\begin{itemize}
+\item Parallel sorting with ST
+\item Chunking small workloads / dynamic strategy
+\item Parallel concatMap
+\item Use non-strict parallelism
+\item Refactor Rasterific for strictness or flatness
+\end{itemize}
+
+\begin{center}
+Some wrap-up words, TL;DR style
+\end{center}
+
 \end{frame}
 \end{document}
