added some evaluation

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -117,6 +117,20 @@ maybe some graphical representation of the table from the report
 \end{frame}
 
 \begin{frame}[c]{Evaluation}
+Fine-grained parallelism:
+\begin{itemize}
+\item Too little work
+\item Too much overhead in data structure conversion
+\end{itemize}
+\bigskip
+
+Coarse-grained parallelism:
+\begin{itemize}
+\item GC overhead -- strictness causes memory strain
+\item Nested parallelism
+\end{itemize}
+
+maybe mention benchmarks
 \end{frame}
 
 \begin{frame}[c]{Further Work and Conclusion}
