added plot for benchmark timings

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -114,7 +114,10 @@ description + threadscope
 \end{frame}
 
 \begin{frame}[c]{Benchmarks and Results}
-maybe some graphical representation of the table from the report
+  \begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.6\linewidth,trim={0cm 0.5cm 0 0},clip]{../timings}
+\end{figure}
 \end{frame}
 
 \begin{frame}[c]{Evaluation}
