--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -106,11 +106,33 @@ I have an idea for a tree-like picture - TBA
 \end{frame}
 
 \begin{frame}[c]{Combining \texttt{EdgeSamples}}
-description + threadscope
+  \begin{itemize}
+  \item Perhaps too fine grained.
+  \item Requires farther reaching changing.
+  \end{itemize}
+ \begin{figure}[H]
+  \includegraphics[width=0.7\linewidth]{../threadscope/combinegrouped/bigflake}
+  \includegraphics[width=0.3\linewidth]{../threadscope/combinegrouped/sparks}
+  \caption{ThreadScope output for running the \texttt{snowflake} program with 500 snowflakes.}
+  \label{fig:combinegrouped-sparks}
+\end{figure}
+
 \end{frame}
 
 \begin{frame}[c]{Filling \texttt{DrawOrders}}
-description + threadscope
+  \begin{itemize}
+  \item Most course granularity.
+  \item Results in heavy GC.
+  \end{itemize}
+ \begin{figure}[H]
+  \centering
+  \includegraphics[width=0.7\linewidth]{../threadscope/fillorder/lines}\\
+  \includegraphics[width=0.3\linewidth]{../threadscope/fillorder/lines-zoom}
+  \includegraphics[width=0.4\linewidth]{../threadscope/fillorder/lines-spark}
+  \caption{ThreadScope output for running the \texttt{lines} program with 5000 lines.}
+  \label{fig:lines-fillorder-spark}
+\end{figure}
+
 \end{frame}
 
 \begin{frame}[c]{Benchmarks and Results}
