fill experiments slide

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -56,28 +56,17 @@
 \end{frame}
 
 \begin{frame}[c]{Experiments}
-  \begin{itemize}
-  \item bla
-  \item bla
-  \item bla
-  \end{itemize}
-
-  \begin{figure}[H]
-  \centering
-  \includegraphics[width=.4\linewidth]{../rasterific-pipeline-flot}
-  \caption{Parallelisation granularity in the Rasterific pipeline.}
-  \label{fig:rasterific-pipeline-flot}
+\begin{itemize}
+\item Modular experiments in parallelising at different granularities.
+\item Strict \texttt{Control.Monad.Par} for parallelism.
+\end{itemize}
+\begin{figure}
+\centering
+\includegraphics[width=0.9\linewidth]{../tree}
+\caption{Four experiments at differing parallelism granularities.}
 \end{figure}
 \end{frame}
 
-\begin{frame}
-
-  
-    overview of experiments - use same pipeline picture, annotated (on the same position in the slide for maximum goodness)
-
-I have an idea for a tree-like picture - TBA
-
-\end{frame}
 \begin{frame}[c]{Decomposition of \texttt{Primitives}}
   \begin{itemize}
   \item Fine grained parallelism.
